Created new module drawDateGenerator, adapted new classes and tests